# topological-flow-matching

./: .gitignore  LICENSE  PLAN.md  README.md  brain_fmri_experiment-flow_matching.ipynb  brain_fmri_experiment-new.ipynb  brain_fmri_experiment-packaged.ipynb  brain_fmri_experiment-refactored-frames.ipynb  brain_fmri_experiment-refactored.ipynb  brain_fmri_experiment.ipynb  class_structure_design.md  everything.py  linear_gaussian_bridges-refactored.ipynb  linear_gaussian_bridges.ipynb  playground.ipynb  pyproject.toml  requirements.txt  static_discrete_schrodinger_bridge.md
configs/: config.yaml
configs/data/: brain.yaml  earthquakes.yaml  gaussians_to_moons.yaml  ocean.yaml  single_cell.yaml  traffic.yaml
configs/experiments/: default.yaml
configs/frame/: spectral.yaml
configs/hydra/: default.yaml
configs/model/: gcn.yaml  residual_nn.yaml
configs/ot/: default.yaml
configs/plot/: default.yaml
configs/run/: default.yaml
configs/sde/: euclidean_heat_bm.yaml  heat_bm.yaml  topological_heat_bm.yaml  topological_heat_bm_noise.yaml
configs/sde_solver/: euler_maruyama.yaml
configs/test/: default.yaml
configs/time_sampler/: default.yaml  discrete.yaml
configs/train/: default.yaml
configs/trainer/: default.yaml
configs/validation/: default.yaml
datasets/brain/: load_data.ipynb
datasets/brain_signals/: brain_regions_centroids.csv  preprocess.ipynb
datasets/earthquakes/: seismic_preprocessing copy.ipynb  seismic_preprocessing.ipynb
datasets/ocean/: plot.ipynb  prepare_data.ipynb
datasets/single_cell/: A.npy  L_eigenvalues.npy  coord.npy  (+7 more)
(+150 files in other folders)
